# research_neural_networks

./: .gitignore  README.md  pyproject.toml
src/: pickle_function.py  training.py
src/build_data/: import_dataset.py
src/data_loader/: structured_data_loader.py
src/models/: mlp.py
src/solver/: structured_solver.py
